<resources>
    <string name="app_name">Sell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="address">Address Book</string>
    <string name="order">My Order</string>
    <string name="wishlist">My Wishlist</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
