<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_addressbook"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/address" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/payment" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/account" />
    </group>

</menu>
